separate styles and scripts from html

--- a/frontend/login_admin.html
+++ b/frontend/login_admin.html
@@ -5,135 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - DocNest Admin</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="styles/login_admin_style.css"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <style>
-      :root {
-        /* Dark Theme (Default) */
-        --bg-primary-login: #0a0a0a;
-        --bg-card-login: #1a1a1a;
-        --text-primary-login: #e0e0e0;
-        --text-secondary-login: #bbb;
-        --text-tertiary-login: #999;
-        --border-card-login: #333;
-        --shadow-card-login: 0 8px 20px rgba(0, 0, 0, 0.3);
-        --button-google-bg: #ffffff;
-        --button-google-text: #1f2937;
-        --button-google-border: #d1d5db;
-        --button-google-bg-hover: #f3f4f6;
-        --error-text-login: #f87171;
-        --error-bg-login: rgba(248, 113, 113, 0.1);
-        --error-border-login: #f87171;
-        --theme-toggle-bg: var(--bg-card-login);
-        --theme-toggle-text: var(--text-secondary-login);
-        --theme-toggle-border: var(--border-card-login);
-        --theme-toggle-bg-hover: var(--bg-card-hover);
-        --theme-toggle-text-hover: var(--text-primary-login);
-        --theme-toggle-ring: #007acc; /* Matches admin panel focus */
-      }
-
-      .light-theme {
-        --bg-primary-login: #f4f4f5; /* zinc-100 */
-        --bg-card-login: #ffffff;
-        --text-primary-login: #18181b; /* zinc-900 */
-        --text-secondary-login: #52525b; /* zinc-600 */
-        --text-tertiary-login: #71717a; /* zinc-500 */
-        --border-card-login: #d1d5db; /* gray-300 */
-        --shadow-card-login: 0 4px 15px rgba(0, 0, 0, 0.07);
-        --button-google-bg: #27272a; /* zinc-800 */
-        --button-google-text: #ffffff;
-        --button-google-border: #27272a;
-        --button-google-bg-hover: #18181b; /* zinc-900 */
-        --error-text-login: #dc2626; /* red-600 */
-        --error-bg-login: rgba(220, 38, 38, 0.1);
-        --error-border-login: #dc2626;
-        --theme-toggle-bg: var(--bg-card-login);
-        --theme-toggle-text: var(--text-secondary-login);
-        --theme-toggle-border: var(--border-card-login);
-        --theme-toggle-bg-hover: #f9fafb; /* gray-50 */
-        --theme-toggle-text-hover: var(--text-primary-login);
-        --theme-toggle-ring: #2563eb; /* Matches admin panel focus */
-      }
-
-      body {
-        font-family: "Inter", sans-serif;
-        background-color: var(--bg-primary-login);
-        color: var(--text-primary-login);
-        transition: background-color 0.3s ease, color 0.3s ease;
-      }
-      .login-container {
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 1rem;
-        position: relative;
-      }
-      .login-card {
-        background-color: var(--bg-card-login);
-        border: 1px solid var(--border-card-login);
-        box-shadow: var(--shadow-card-login);
-        color: var(--text-primary-login);
-      }
-      .google-btn {
-        background-color: var(--button-google-bg);
-        color: var(--button-google-text);
-        border: 1px solid var(--button-google-border);
-        transition: background-color 0.2s ease-in-out,
-          transform 0.1s ease-in-out;
-      }
-      .google-btn:hover {
-        background-color: var(--button-google-bg-hover);
-        transform: translateY(-1px);
-      }
-      .google-btn:disabled {
-        opacity: 0.7;
-        cursor: not-allowed;
-      }
-      .spinner {
-        animation: spin 1s linear infinite;
-        border: 2px solid currentColor;
-        border-top-color: transparent;
-        border-radius: 50%;
-        width: 1em;
-        height: 1em;
-        margin-right: 0.5em;
-      }
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-      #error-message {
-        color: var(--error-text-login);
-        background-color: var(--error-bg-login);
-        border: 1px solid var(--error-border-login);
-      }
-      #theme-toggle-button-login {
-        position: absolute;
-        top: 1.5rem;
-        right: 1.5rem;
-        background-color: var(--theme-toggle-bg);
-        color: var(--theme-toggle-text);
-        border: 1px solid var(--theme-toggle-border);
-        padding: 0.5rem;
-        border-radius: 0.375rem;
-      }
-      #theme-toggle-button-login:hover {
-        background-color: var(--theme-toggle-bg-hover);
-        color: var(--theme-toggle-text-hover);
-      }
-      #theme-toggle-button-login:focus {
-        outline: none;
-        box-shadow: 0 0 0 2px var(--theme-toggle-ring);
-      }
-    </style>
   </head>
   <body>
     <div class="login-container">
@@ -194,288 +70,7 @@
       </div>
     </div>
 
-        <script type="module">
-      // Import Firebase v9 modular SDK
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-      import {
-        getAuth,
-        signInWithPopup,
-        GoogleAuthProvider,
-        onAuthStateChanged,
-        signOut,
-        getIdToken,
-      } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
-
-      const firebaseConfig = {
-        apiKey: "AIzaSyCbHWUEzqGjzeanOiMG0Z5Lb4wIjWWEMUQ",
-        authDomain: "docnest-f85e2.firebaseapp.com",
-        projectId: "docnest-f85e2",
-        storageBucket: "docnest-f85e2.appspot.com",
-        messagingSenderId: "102395439437",
-        appId: "1:102395439437:web:84e6676388b5d54395af04",
-        measurementId: "G-YRMBR8BVSE",
-      };
-
-      let app;
-      let auth;
-      let googleProvider;
-      let isProcessingLogin = false;
-
-      const loginButton = document.getElementById("login-button");
-      const errorMessageDiv = document.getElementById("error-message");
-      const themeToggleButtonLogin = document.getElementById(
-        "theme-toggle-button-login"
-      );
-
-      const sunIcon = `<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" /></svg>`;
-      const moonIcon = `<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>`;
-
-      function applyLoginTheme(theme) {
-        if (theme === "light") {
-          document.body.classList.add("light-theme");
-          if (themeToggleButtonLogin)
-            themeToggleButtonLogin.innerHTML = moonIcon;
-          localStorage.setItem("loginTheme", "light");
-        } else {
-          document.body.classList.remove("light-theme");
-          if (themeToggleButtonLogin)
-            themeToggleButtonLogin.innerHTML = sunIcon;
-          localStorage.setItem("loginTheme", "dark");
-        }
-      }
-
-      if (themeToggleButtonLogin) {
-        themeToggleButtonLogin.addEventListener("click", () => {
-          applyLoginTheme(
-            document.body.classList.contains("light-theme") ? "dark" : "light"
-          );
-        });
-      }
-
-      const savedLoginTheme = localStorage.getItem("loginTheme");
-      const prefersDarkLogin = window.matchMedia(
-        "(prefers-color-scheme: dark)"
-      ).matches;
-      applyLoginTheme(savedLoginTheme || (prefersDarkLogin ? "dark" : "dark"));
-
-      function setButtonLoadingState(isLoading) {
-        const buttonTextSpan = loginButton.querySelector(".button-text");
-        if (isLoading) {
-          loginButton.disabled = true;
-          if (buttonTextSpan) {
-            buttonTextSpan.dataset.originalText = buttonTextSpan.textContent;
-            buttonTextSpan.innerHTML = `<span class="spinner"></span>Signing in...`;
-          }
-        } else {
-          loginButton.disabled = false;
-          if (buttonTextSpan && buttonTextSpan.dataset.originalText) {
-            buttonTextSpan.innerHTML = buttonTextSpan.dataset.originalText;
-          } else if (buttonTextSpan) {
-            buttonTextSpan.innerHTML = "Sign in with Google";
-          }
-        }
-      }
-
-      function showLoginError(message) {
-        errorMessageDiv.textContent = message;
-        errorMessageDiv.classList.remove("hidden");
-      }
-
-      function clearLoginError() {
-        errorMessageDiv.textContent = "";
-        errorMessageDiv.classList.add("hidden");
-      }
-
-      if (
-        firebaseConfig.apiKey === "AIzaSyCbHWUEzqGjzeanOiMG0Z5Lb4wIjWWEMUQ"
-      ) {
-        console.warn(
-          "Firebase config might be using a placeholder API key. Please ensure it's correctly set for production."
-        );
-        // Decide if you want to block login or show an error if the key seems like a placeholder
-        // For development, you might allow it, but for production, you'd want the real key.
-      }
-
-      try {
-        app = initializeApp(firebaseConfig);
-        auth = getAuth(app);
-        googleProvider = new GoogleAuthProvider();
-      } catch (e) {
-        console.error("Error initializing Firebase:", e);
-        showLoginError(
-          "Login service initialization failed. Please contact support."
-        );
-        if (loginButton) loginButton.disabled = true;
-      }
-
-
-      async function handleAdminAuthentication(user) {
-        if (!user) {
-          setButtonLoadingState(false);
-          isProcessingLogin = false;
-          return;
-        }
-
-        setButtonLoadingState(true);
-        clearLoginError();
-
-        try {
-          const token = await getIdToken(user, true);
-          sessionStorage.setItem("token", token);
-
-          // ================================================================
-          // DYNAMIC BACKEND URL SELECTION
-          // ================================================================
-          let backendApiUrl;
-          const localApiUrl = "http://localhost:8000/api/auth";
-          // IMPORTANT: Replace this with your *actual* Cloud Run service URL
-          const cloudRunApiUrl = "https://docnest-780614596615.asia-south1.run.app/api/auth";
-
-          if (window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1") {
-            backendApiUrl = localApiUrl;
-          } else {
-            backendApiUrl = cloudRunApiUrl;
-            // Safety check for placeholder URL in production-like environment
-            if (cloudRunApiUrl.includes("your-docnest-backend-servicename-xxxxxx-yy") || cloudRunApiUrl.includes("your-actual-cloud-run-url")) {
-                 const warningMessage = "CRITICAL: Cloud Run URL is a placeholder! Please update 'cloudRunApiUrl' in the script.";
-                 console.error(warningMessage);
-                 showLoginError("Configuration error. Cannot contact login service. Please inform the administrator.");
-                 setButtonLoadingState(false);
-                 isProcessingLogin = false;
-                 // Optionally sign out the user if they were partially logged in via Firebase
-                 if (auth && auth.currentUser) {
-                    await signOut(auth).catch(e => console.error("Sign out error during config warning:", e));
-                 }
-                 sessionStorage.removeItem("token");
-                 return; // Stop execution
-            }
-          }
-          // ================================================================
-
-          const backendResponse = await fetch(
-            backendApiUrl,
-            {
-              method: "POST",
-              headers: {
-                Authorization: `Bearer ${token}`,
-                "Content-Type": "application/json",
-              },
-            }
-          );
-
-
-          if (!backendResponse.ok) {
-            const errorText = await backendResponse.text();
-            console.error("Admin Login: Backend auth error response:", errorText);
-            let errorData = { detail: `Authorization failed (Status: ${backendResponse.status})` }; // Default error
-            try {
-                if (errorText) { // Ensure errorText is not empty
-                    const parsedError = JSON.parse(errorText);
-                    if (parsedError.detail) {
-                        errorData.detail = parsedError.detail;
-                    }
-                }
-            } catch (parseError) {
-                console.warn("Admin Login: Could not parse JSON error response from backend. Using raw text or default.", parseError);
-                if (errorText) errorData.detail = errorText; // Use raw error text if parsing fails
-            }
-            throw new Error(errorData.detail);
-          }
-
-          const userData = await backendResponse.json();
-
-          if (userData && userData.isAdmin === true) {
-            window.location.href = "admin.html";
-          } else {
-            showLoginError(
-              "Access Denied: You do not have administrator privileges."
-            );
-            if (auth) {
-              await signOut(auth).catch((e) =>
-                console.error("Sign out error (not admin):", e)
-              );
-            }
-            sessionStorage.removeItem("token");
-            setButtonLoadingState(false);
-          }
-        } catch (error) {
-          console.error("Admin Login: Error during authentication flow:", error);
-          showLoginError(`Authentication error: ${error.message}.`);
-          if (auth && auth.currentUser) { // Check if auth object and currentUser exist
-            await signOut(auth).catch((e) =>
-              console.error("Sign out error during catch:", e)
-            );
-          }
-          sessionStorage.removeItem("token");
-          setButtonLoadingState(false);
-        } finally {
-          isProcessingLogin = false;
-        }
-      }
-
-      let initialAuthCheckProcessed = false;
-      if (auth) {
-        onAuthStateChanged(auth, (user) => {
-
-          if (user && !initialAuthCheckProcessed && !isProcessingLogin) {
-            initialAuthCheckProcessed = true;
-            handleAdminAuthentication(user);
-          } else if (!user) {
-            sessionStorage.removeItem("token");
-            setButtonLoadingState(false);
-            isProcessingLogin = false;
-            // No need to reset initialAuthCheckProcessed here usually,
-            // as it's meant for the very first load. If a user signs out and
-            // then signs back in via button click, that's handled by triggerGoogleSignIn.
-          }
-        });
-      }
-
-
-      async function triggerGoogleSignIn() {
-        if (!auth || !googleProvider) {
-          showLoginError(
-            "Login service not available. Please check configuration."
-          );
-          return;
-        }
-        if (isProcessingLogin) {
-          return;
-        }
-
-        clearLoginError();
-        setButtonLoadingState(true);
-        isProcessingLogin = true;
-
-        try {
-          const result = await signInWithPopup(auth, googleProvider);
-          await handleAdminAuthentication(result.user);
-        } catch (err) {
-          console.error("Admin Login: Google Sign-In Popup Error:", err);
-          let friendlyMessage = "Sign-in failed. Please try again.";
-          if (err.code === "auth/popup-closed-by-user") {
-            friendlyMessage = "Sign-in popup closed before completion.";
-          } else if (err.code === "auth/network-request-failed") {
-            friendlyMessage = "Network error. Please check your connection.";
-          } else if (
-            err.code === "auth/cancelled-popup-request" ||
-            err.code === "auth/popup-blocked"
-          ) {
-            friendlyMessage =
-              "Sign-in popup was blocked or cancelled. Please enable popups and try again.";
-          }
-          showLoginError(friendlyMessage);
-          setButtonLoadingState(false);
-          isProcessingLogin = false;
-        }
-      }
-
-      if (loginButton) {
-        loginButton.addEventListener("click", triggerGoogleSignIn);
-      } else {
-        console.error("Login button not found.");
-      }
-    </script>
+    <script src="scripts/login_admin_script.js" type="module"></script>
 
   </body>
 </html>
